# flask-dynamic-route-registration

./: .gitignore  README.md  pyproject.toml
src/dynamic_route_registration/: __init__.py  blueprint_decorator.py  register_blueprints.py
